css root element

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>sumedh.portfolio library</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><h1> hi am sumedh</h1>
-    <p> hi am learning java script</p>
+<body><h1 class="hero-heading"> hi am sumedh</h1>
+    <p class="para"> hi am learning java script</p>
     
 </body>
 </html>
