--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>sumedh.portfolio library</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><h1 class="hero-heading"> hi am sumedh</h1>
+<body><h1 class="hero-heading"> Hi am sumedh</h1>
     <p class="para"> hi am learning java script</p>
     
 </body>
