--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>sumedh.portfolio library</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header class="heading"> home</header>
+<header class="heading">projects</header>
+<header class="heading">blogs</header>
 <body><h1 class="hero-heading"> Hi am sumedh</h1>
     <p class="para"> hi am learning java script</p>
+
     
 </body>
 </html>
