--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sumedh.portfolio library</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
+<div class="header-1">
 <header class="heading"> home</header>
 <header class="heading">projects</header>
 <header class="heading">blogs</header>
-<body><h1 class="hero-heading"> Hi am sumedh</h1>
+</div>   
+<body><h1 class="hero-heading"> Hi am sumedh </h1>
     <p class="para"> hi am learning java script</p>
 
     
