--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
 <header class="heading">projects</header>
 <header class="heading">blogs</header>
 </div>   
-<body><h1 class="hero-heading"> Hi am sumedh </h1>
-    <p class="para"> hi am learning java script</p>
+
+<body>
+    <h1 class="hero-heading"> Hi am sumedh </h1>
+ <p class="para"> hi am learning java script </p>
+
+    <h1 class="hero-heading"> @links </h1>
+
+ <a class="primary-link" href="https://github.com/sumedhcode/sumedh.portfoflio">sumedhcode</a>
+
+<a class="secondary-link" href="https://github.com/">github</a>
 
     
 </body>
