--- a/index.html
+++ b/index.html
@@ -30,5 +30,25 @@
     <a href="/">Primary link</a>
     <a href="/">Secondary link</a>
     <hr>
+  <h2>lists</h2>
+  <h3>unordered list</h3>
+  <ul>
+    <li>item one</li>
+    <li>item two</li>
+    <li>item three</li> 
+</ul>
+<h3>unordered inline list</h3>
+<ul>
+    <li>inline item one</li>
+    <li>inline item two</li>
+    <li>inline item three</li>
+</ul>
+<h3> reversed ordered list</h3>
+<ol>
+    <li>milk</li>
+    <li>eggs</li>
+    <li>bread</li>
+</ol>
+<hr>
 </body>
 </html>
