--- a/index.html
+++ b/index.html
@@ -50,5 +50,23 @@
     <li>bread</li>
 </ol>
 <hr>
+<h2>@Nav</h2>
+<nav>
+    <ul>
+        <li>
+            <a href="/">home</a>
+            
+        </li>
+        
+        <li>
+            <a href="/">projects</a>
+        </li>
+
+        <li>
+            <a href="/">about</a>
+        </li>
+    </ul>
+</nav>
+<hr>
 </body>
 </html>
