hero img and heading

--- a/index.html
+++ b/index.html
@@ -68,5 +68,12 @@
     </ul>
 </nav>
 <hr>
+<h2>@Header</h2>
+
+<header>
+    <img src="images/hero.svg" alt="">
+    <h1>heading inside header</h1>
+</header>
+<h2>@Sections</h2>
 </body>
 </html>
