sections and footers

--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
     <img src="images/hero.svg" alt="">
     <h1>heading inside header</h1>
 </header>
+<hr>
+
 <h2>@Sections</h2>
+<section>
+    <h3>
+        white section
+    </h3>
+    <p>this will have a white background</p>
+</section>
+
+<section>
+    <h3>Off-white section </h3>
+    <p>this will have a grey background</p>
+</section>
+<hr>
+
+<footer>
+    <h2>@footer</h2>
+    <div>some small heading inside footer</div>
+    <ul>
+        <li>socail-one </li>
+        <li>social-two</li>
+        <li>social-three</li>
+    </ul>
+</footer>
+
 </body>
 </html>
