--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <h2>@Containers</h2>
     <h3>Fluid Container</h3>
-    <div>this is a container and this will go end of the web page</div>
+    <div class="container">this is a container and this will go end of the web page</div>
 
     <h3>Center Container</h3>
-    <div>this is a container and this will go to the specified width</div>
+    <div class="container container-centre">this is a container and this will go to the specified width</div>
     <hr>
 
     <h2>@links</h2>
