--- a/index.html
+++ b/index.html
@@ -33,42 +33,44 @@
     <hr>
   <h2>lists</h2>
   <h3>unordered list</h3>
-  <ul>
+  <ul class="list-unordered">
     <li>item one</li>
     <li>item two</li>
     <li>item three</li> 
 </ul>
 <h3>unordered inline list</h3>
-<ul>
-    <li>inline item one</li>
-    <li>inline item two</li>
-    <li>inline item three</li>
+<ul class="list-unorderd">
+    <li class="list-inline-items">inline item one</li>
+    <li class="list-inline-items">inline item two</li>
+    <li class="list-inline-items">inline item three</li>
 </ul>
 <h3> reversed ordered list</h3>
-<ol>
+<ol reversed>
     <li>milk</li>
     <li>eggs</li>
     <li>bread</li>
 </ol>
 <hr>
 <h2>@Nav</h2>
-<nav>
-    <ul>
-        <li>
-            <a href="/">home</a>
-            
+<nav class="navigation container">
+    <div class="nav-brand">SumedhCode</div>
+    <ul class="list-unordered nav-pills">
+        <li class="list-inline-items">
+
+            <a class="link link-active" href="/">home</a>
         </li>
         
-        <li>
-            <a href="/">projects</a>
+        <li class="list-inline-items">
+            <a class="link" href="/">projects</a>
         </li>
 
-        <li>
-            <a href="/">about</a>
+        <li class="list-inline-items">
+            <a class="link" href="/">about</a>
         </li>
     </ul>
 </nav>
 <hr>
+
 <h2>@Header</h2>
 
 <header>
