--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
 
 <h2>@Header</h2>
 
-<header>
-    <img src="images/hero.svg" alt="">
-    <h1>heading inside header</h1>
+<header class="hero">
+    <img class="hero-img" src="images/hero.svg" alt="">
+    <h1 class="hero-heading">Sumedh <span class="heading-inverted"> develops 
+    </span> </h1>
 </header>
 <hr>
 
