--- a/index.html
+++ b/index.html
@@ -81,16 +81,24 @@
 <hr>
 
 <h2>@Sections</h2>
-<section>
-    <h3>
-        white section
-    </h3>
-    <p>this will have a white background</p>
+<section class="section">
+<div class="container container-centre">
+    <h1> white section</h1>
+    <p>its very simple to add autolayouts in elements. Suppose, just for example, you want to make a simple button first go write text lets say you write “sign-in” now select this and press SHIFT+ A to add autolayout    
+
+        Now you see the frame along with the text, now can style this frame like change its color etc. etc. as you increase the length of the text the button expand proportionally automatically.
+    </p>
+</div>
 </section>
 
-<section>
-    <h3>Off-white section </h3>
-    <p>this will have a grey background</p>
+<section class="section ow">
+    <div class="container container-centre">
+    <h1>Off-white section </h1>
+    <p>its very simple to add autolayouts in elements. Suppose, just for example, you want to make a simple button first go write text lets say you write “sign-in” now select this and press SHIFT+ A to add autolayout    
+
+        Now you see the frame along with the text, now can style this frame like change its color etc. etc. as you increase the length of the text the button expand proportionally automatically.
+        </p>
+</div>
 </section>
 <hr>
 
