--- a/index.html
+++ b/index.html
@@ -103,12 +103,15 @@
 <hr>
 
 <h2>@footer</h2>
-<footer>
-    <div>some small heading inside footer</div>
-    <ul>
-        <li>socail-one </li>
-        <li>social-two</li>
-        <li>social-three</li>
+<footer class="footer">
+    <div class="footer-header">some small heading inside footer</div>
+    <ul class="social-links list-unorderd">
+        <li class="list-inline-items">
+            <a class="link" href="/">socail-one </a> </li>
+        <li class="list-inline-items">
+            <a class="link" href="/">socail-two </a> </li>
+        <li class="list-inline-items"> 
+            <a class="link" href="/">socail-three </a></li>
     </ul>
 </footer>
 
