my blogs update

--- a/blogs.html
+++ b/blogs.html
@@ -32,6 +32,14 @@
         </span></h1>
     </header>
     
+    <div class="container container-centre">
+    <h1 style="margin: 0px;">How to be a UI/UX designer in 2022</h1>
+    <small style="color: grey;">24 November 2022</small>
+
+    <p style="margin-top: 8px; max-width: 500px; color: rgb(82, 82, 82);">this is the normal text for paragraphs,it will automatically wrap as per size of the web page and adjust it</p>
     
+    <a class="link link-secondary" href="/">Read the blog</a>
+</div> 
+
 </body>
 </html>
