--- a/blogs.html
+++ b/blogs.html
@@ -37,9 +37,28 @@
     <small style="color: grey;">24 November 2022</small>
 
     <p style="margin-top: 8px; max-width: 500px; color: rgb(82, 82, 82);">this is the normal text for paragraphs,it will automatically wrap as per size of the web page and adjust it</p>
+
+    <a class="link link-secondary" href="/">Read the blog</a>
+</div> <br><br>
+
+
+<div class="container container-centre">
+    <h1 style="margin: 0px;">Best way to learn CODE</h1>
+    <small style="color: grey;">20 October 2022</small>
+
+    <p style="margin-top: 8px; max-width: 500px; color: rgb(82, 82, 82);">this is the normal text for paragraphs,it will automatically wrap as per size of the web page and adjust it</p>
     
     <a class="link link-secondary" href="/">Read the blog</a>
-</div> 
+</div><br><br>
+
+<div class="container container-centre">
+    <h1 style="margin: 0px;">Learn these skills in 2022</h1>
+    <small style="color: grey;">24 November 2022</small>
+
+    <p style="margin-top: 8px; max-width: 500px; color: rgb(82, 82, 82);">this is the normal text for paragraphs,it will automatically wrap as per size of the web page and adjust it</p>
+    
+    <a class="link link-secondary" href="/">Read the blog</a>
+</div> <br> <br>
 
 </body>
 </html>
