--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         <section class="section ow">
             <div class="container container-centre">
                 <h1>projects</h1>
-                <p>its very simple to add autolayouts in elements. Suppose, just for example, you want to make a simple button first go write text lets say you write “sign-in” now select this and press SHIFT+ A to add autolayout    
-            
- Now you see the frame along with the text, now can style this frame like change its color etc. etc. as you increase the length of the text the button expand proportionally automatically.
+                <p>its very simple to add autolayouts in elements. Suppose, just for example, you want to make a simple button first go write text lets say you write “sign-in” now select this and press SHIFT+ A to add autolayoutNow you see the frame along with the text, now can style this frame like change its color etc. etc. as you increase the length of the text the button expand proportionally automatically.
                 </p>
                 <a class="link link-primary" href="/projects.html">See Projects</a>
             </div>
