--- a/blogs.html
+++ b/blogs.html
@@ -62,3 +62,14 @@
 
 </body>
 </html>
+<footer class="footer">
+    <div class="footer-header">Social links</div>
+    <ul class="social-links list-unorderd">
+        <li class="list-inline-items">
+            <a class="link" href="/">twitter</a> </li>
+        <li class="list-inline-items">
+            <a class="link" href="/">linkedin </a> </li>
+        <li class="list-inline-items"> 
+            <a class="link" href="/">instagram </a></li>
+    </ul>
+</footer>
